example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
     - http:
         paths:
           - path: /hello
             pathType: Prefix
             backend:
               service:
                 name: web
                 port:
                   number: 8080
           - path: /hero/(.*)
             pathType: Prefix
             backend:
               service:
                 name: hero
                 port:
                   number: 80
